@@ -143,8 +143,8 @@ skip_if_libphonenumber("Stubs don't support operator", 1, sub {
         ['+1 473 230 0000' => 'COLUMBUS COMMUNICATIONS (GRENADA) LIMITED'],
         ['+1 649 231 0000' => 'CABLE & WIRELESS - TURKS & CAICOS'],
         # No data yet.
-        # checked on 2019-09-08
-        # next check due 2019-12-01 (quarterly) until there's data
+        # checked on 2019-12-11
+        # next check due 2020-06-01 (semi-annually) until there's data
         # at https://localcallingguide.com/xmlprefix.php?npa=658&blocks=1
         # ['+1 658 ??? 0000' => '???'],
         ['+1 664 349 0000' => 'CABLE & WIRELESS - MONTSERRAT'],
@@ -174,11 +174,13 @@ skip_if_libphonenumber("Stubs don't support operator", 1, sub {
         "Oh good, the database contains data for all the non-US/CA area codes (except 658, for which no data are yet available)"
     );
 
-    # checked on 2018-12-14 that these are consolidated ten-thousand blocks
-    # next check due 2019-12-01 (annually)
+    # checked on 2019-12-11 that these are consolidated ten-thousand blocks
+    # next check due 2020-12-01 (annually)
+    # https://localcallingguide.com/xmlprefix.php?npa=630&blocks=1
+    # https://localcallingguide.com/xmlprefix.php?npa=242&blocks=1
     is($CLASS->new('+1 630 847 0000')->operator(), 'YMAX COMMUNICATIONS CORP. - IL', 'USA, thousands blocks all for same operator, so consolidated into one to save space in database');
-    # checked on 2018-12-14
-    # next check due 2019-12-01 (annually)
+    # checked on 2019-12-11
+    # next check due 2020-12-01 (annually)
     is($CLASS->new('+1 242 367 0000')->operator(), 'BAHAMAS TELECOMMUNICATIONS CORP.', 'Bahamas, thousands blocks all for same operator, so consolidated into one to save space in database');
 
     foreach my $number(
